app/assets/stylesheets/cities.css.scss
@import "bootstrap/variables"; // FIXME
@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:700|Open+Sans:400,700);

body {
  font-family: "Open Sans", sans-serif;
}
h1, h2, h3 {
  font-family: "Roboto Slab", serif;
}
html, body, .map-wrapper, #map {
  height: 100%;
}
.map-wrapper {
  margin: 0;
  padding: 0;
}
@media (min-width: $screen-sm-min) {
  #legend {
    height: 100%;
    overflow-y: auto;
    border-right: solid 1px #ccc;
  }
}
.breadcrumb {
  margin-top: 20px;
}
#legend {
  .slider {
    width: 100%;
  }
  .slider-handle {
    background: $progress-bg;
    border: solid 1px $input-border;
    border-radius: $border-radius-base;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
    opacity: 1;
  }
  .slider-selection {
    background: $progress-bar-bg;
  }
  .slider-track {
    background-color: $progress-bg;
    border-radius: $border-radius-base;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
    height: 12px;
    margin-top: -6px;
  }
}

